sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value getValeurNombre
  for (i<- 1 to getValeurNombre()){
                ^